# hicore

HicoreDemo/: build.gradle  settings.gradle
HicoreDemo/app/: build.gradle
HicoreDemo/app/src/androidTest/java/com/hikvision/hicoredemo/: ExampleInstrumentedTest.java
HicoreDemo/app/src/main/: AndroidManifest.xml
HicoreDemo/app/src/main/cpp/: CMakeLists.txt  JniImp.cpp  ixml.h  ixml_build_config.h  upFile.c  upFile.cpp  upFile.h
HicoreDemo/app/src/main/cpp/include/: log4j.h  openssl_build_config.h
HicoreDemo/app/src/main/cpp/include/aip/: aip.h  aip_build_config.h
HicoreDemo/app/src/main/cpp/include/aip/appMng/: aip_app_mng.h
HicoreDemo/app/src/main/cpp/include/aip/common/: aip_common.h  aip_common_event.h
HicoreDemo/app/src/main/cpp/include/aip/devMng/: aip_dev_bluetooth.h  aip_usb_mng.h
HicoreDemo/app/src/main/cpp/include/aip/exception/: aip_exception.h
HicoreDemo/app/src/main/cpp/include/aip/exception/watchdog/: aip_watchdog.h
HicoreDemo/app/src/main/cpp/include/aip/netMng/: aip_net_common.h  aip_net_mng.h  aip_net_port_mng.h
HicoreDemo/app/src/main/cpp/include/aip/netMng/cellular/: aip_net_cellular_mobile.h
HicoreDemo/app/src/main/cpp/include/aip/netMng/interface/: aip_net_config.h  aip_net_dad.h  aip_net_ip_addr.h  aip_net_ip_link.h  aip_net_status.h  aip_net_utils.h
HicoreDemo/app/src/main/cpp/include/aip/netMng/wifi/: aip_net_wifi.h
HicoreDemo/app/src/main/cpp/include/aip/securityMng/: aip_security_event.h  aip_security_lock_manage.h  aip_security_user_utils.h
HicoreDemo/app/src/main/cpp/include/aip/shell/: aip_shell_server.h
HicoreDemo/app/src/main/cpp/include/aip/syslib/: aip_syslib.h
HicoreDemo/app/src/main/cpp/include/aip/timeMng/: aip_time_common.h  aip_time_mng.h  aip_time_utils.h
HicoreDemo/app/src/main/cpp/include/aip/utilDebug/: aip_util_debug.h  aip_util_module.h
HicoreDemo/app/src/main/cpp/include/aip/utils/: aip_utils_base.h  aip_utils_code_convert.h  aip_utils_communication.h  aip_utils_file_process.h  aip_utils_string_deal.h
HicoreDemo/app/src/main/cpp/include/aip/utils/threadpool/: aip_utils_threadpool.h
HicoreDemo/app/src/main/cpp/include/bsp/: DDM.h  bsp.h  bsp_data_encrypt.h  bsp_hash.h  hprsafefunc.h  hprsecurec.h  hprsecurectype.h  libbsp.h  librsak.h  m1_secure.h  ndc.h  skfapi.h
HicoreDemo/app/src/main/cpp/include/cjson/: cjson_build_config.h
HicoreDemo/app/src/main/cpp/include/hpr/: HPR_Addr.h  HPR_AsyncIO.h  HPR_AsyncIOEX.h  HPR_Cond.h  HPR_Config.h  HPR_Debug.h  HPR_DllSo.h  HPR_Error.h  HPR_Event.h  HPR_Guard.h  HPR_Hpr.h  HPR_Inet_Addr.h  HPR_LockFreeQ.h  HPR_MemoryPool.h  HPR_MemoryPoolEX.h  HPR_MemoryPoolGlobal.h  HPR_MsgQ.h  HPR_Mutex.h  HPR_Net_Addr.h  HPR_Net_Utils.h  HPR_Netdb.h  HPR_Select.h  HPR_Semaphore.h  HPR_SharedMutex.h  HPR_Singleton.h  HPR_SmartPtr.h  HPR_Sock_Utils.h  HPR_Socket.h  HPR_String.h  HPR_Thread.h  HPR_ThreadPool.h  HPR_ThreadPoolFlex.h  HPR_Time.h  HPR_Timer.h  HPR_TraceInfoTLS.h  HPR_Utils.h  TimedWait.h
HicoreDemo/app/src/main/cpp/include/hwsdk/: hardware_desc.h  hwsdk_build_config.h  opdevsdk_hardware.h  opdevsdk_hardware_all_device_info.h  opdevsdk_hardware_basic_device_info.h  opdevsdk_hardware_ex.h
HicoreDemo/app/src/main/cpp/include/iconv/: iconv_build_config.h
HicoreDemo/app/src/main/cpp/include/lst/: lstLib.h  lst_build_config.h
HicoreDemo/app/src/main/cpp/include/openssl/: opensslconf.h
HicoreDemo/app/src/main/cpp/include/posixWrapper/: posixWrapper.h  posix_wrapper_build_config.h
HicoreDemo/app/src/main/cpp/include/posixWrapper/mq/: mqFactory.h
HicoreDemo/app/src/main/cpp/include/secu_storage/: dev_key_manage.h  encrypt_debug.h  file_encrypt.h  secu_storage_build_config.h  security_interface.h  sensitive_info_field_encrypt.h  sqlcipher_config.h
HicoreDemo/app/src/main/cpp/include/securec/: securec_api.h  securec_api_macro.h  securec_build_config.h
HicoreDemo/app/src/main/cpp/include/sntp/: sntp.h  sntp_build_config.h
HicoreDemo/app/src/main/cpp/include/util_encrypt/: crc16.h  encrypt_algo_interface.h  util_encrypt.h  util_encrypt_build_config.h
HicoreDemo/app/src/main/cpp/jsonif/: HPR_Types.h  cjson_build_config.h  configTypesProgramExport.c.h  configTypesProgramImport.h  json_interface.h  variable_info.h
HicoreDemo/app/src/main/cpp/lib/: libcrypto.so.1.1
HicoreDemo/app/src/main/cpp/utils/: FileOp.cpp  FileOp.h  LogUtil.h  ToolUnits.cpp
HicoreDemo/app/src/main/java/com/hikvision/: Hicore.java
HicoreDemo/app/src/main/java/com/hikvision/hicoredemo/: MainActivity.java
HicoreDemo/app/src/main/java/com/hikvision/hicoredemo/utils/: FileOp.java  HexStringUtils.java
HicoreDemo/app/src/main/java/com/hikvision/permission/: CheckPermissionActivity.java
HicoreDemo/app/src/main/res/values/: strings.xml  themes.xml
HicoreDemo/app/src/main/res/values-night/: themes.xml
HicoreDemo/app/src/test/java/com/hikvision/hicoredemo/: ExampleUnitTest.java
HicoreDemo/gradle/wrapper/: gradle-wrapper.properties
SipDemo/: SipDemo.sln
SipDemo/SipDemo/: Client.cpp  Client.h  ClientMgr.cpp  ClientMgr.h  Markup.cpp  Markup.h  MemoryPool.cpp  MemoryPool.h  MultiThreadWork.cpp  MultiThreadWork.h  Network.cpp  Network.h  Resource.h  SipDemo.aps  SipDemo.cpp  SipDemo.h  SipDemo.rc  SipDemo.vcproj  SipDemo.vcxproj  SipDemo.vcxproj.filters  SipDemoDlg.cpp  SipDemoDlg.h  stdafx.cpp
SipDemo/SipDemo/Include/hlog/: hlog1.h  hlogex.h  logdef.h
SipDemo/SipDemo/Include/hpr/: HPR_Addr.h  HPR_AsyncIO.h  HPR_AsyncIOEX.h  HPR_Atomic.h  HPR_Cond.h  HPR_Config.h  HPR_DllSo.h  HPR_Error.h  HPR_FileSystem.h  HPR_Guard.h  HPR_Hpr.h  HPR_IOCompletionQ.h  HPR_Inet_Addr.h  HPR_MsgQ.h  HPR_Mutex.h  HPR_Net_Addr.h  HPR_Net_Utils.h  HPR_Netdb.h  HPR_Select.h  HPR_Semaphore.h  HPR_Singleton.h  HPR_SmartPtr.h  HPR_Sock_Utils.h  HPR_Socket.h  HPR_String.h  HPR_Thread.h  HPR_ThreadPool.h  HPR_ThreadPoolFlex.h  HPR_Time.h  HPR_Types.h  HPR_Utils.h  TimedWait.h  inter_include.h
SipDemo/SipDemo/Lib/: hlog.lib  osipparser.lib
SipDemo/SipDemo/SipDemo/: ReadMe.txt  SipDemo.aps  SipDemoDlg.cpp  SipDemoDlg.h
SipDemo/SipDemo/res/: SipDemo.rc2
